--- a/content/pattern-index.yaml
+++ b/content/pattern-index.yaml
@@ -83,6 +83,10 @@ patterns:
   path: clarify-domains.md
   pid: 3
 - gid: 1
+  name: Co-Create Proposals
+  path: co-create-proposals.md
+  pid: 9
+- gid: 1
   name: Consent Decision Making
   path: consent-decision-making.md
   pid: 4
@@ -145,15 +149,15 @@ patterns:
 - gid: 1
   name: Driver Mapping
   path: driver-mapping.md
-  pid: 11
+  pid: 12
 - gid: 1
-  name: Evaluate Agreements
-  path: evaluate-agreements.md
+  name: Evaluate And Evolve Agreements
+  path: evaluate-and-evolve-agreements.md
   pid: 7
 - gid: 8
   name: Evaluate Meetings
   path: evaluate-meetings.md
-  pid: 3
+  pid: 5
 - gid: 6
   name: Evaluation Criteria
   path: evaluation-criteria.md
@@ -169,7 +173,7 @@ patterns:
 - gid: 8
   name: Governance Backlog
   path: governance-backlog.md
-  pid: 5
+  pid: 7
 - gid: 3
   name: Governance Facilitator
   path: governance-facilitator.md
@@ -209,7 +213,7 @@ patterns:
 - gid: 8
   name: Meeting Host
   path: meeting-host.md
-  pid: 4
+  pid: 6
 - gid: 1
   name: Navigate Via Tension
   path: navigate-via-tension.md
@@ -246,6 +250,10 @@ patterns:
   name: Planning And Review Meetings
   path: planning-and-review-meetings.md
   pid: 4
+- gid: 8
+  name: Prepare For Meetings
+  path: prepare-for-meetings.md
+  pid: 4
 - gid: 9
   name: Prioritize Backlogs
   path: prioritize-backlogs.md
@@ -253,7 +261,7 @@ patterns:
 - gid: 1
   name: Proposal Forming
   path: proposal-forming.md
-  pid: 9
+  pid: 10
 - gid: 9
   name: Pull-System For Work
   path: pull-system-for-work.md
@@ -281,7 +289,7 @@ patterns:
 - gid: 1
   name: Role Selection
   path: role-selection.md
-  pid: 10
+  pid: 11
 - gid: 8
   name: Rounds
   path: rounds.md
@@ -302,6 +310,10 @@ patterns:
   name: Those Affected Decide
   path: those-affected-decide.md
   pid: 8
+- gid: 8
+  name: Timebox Activities
+  path: timebox-activities.md
+  pid: 3
 - gid: 3
   name: Transparent Salary
   path: transparent-salary.md
