--- a/templates/structure.yaml
+++ b/templates/structure.yaml
@@ -41,8 +41,9 @@ chapters:
     - consent decision making
     - objection
     - resolve objections
-    - evaluate agreements
+    - evaluate and evolve agreements
     - those affected decide
+    - co-create proposals
     - proposal forming
     - role selection
     - driver mapping
@@ -86,6 +87,8 @@ chapters:
   meeting practices:
     - rounds
     - facilitate meetings
+    - timebox activities
+    - prepare for meetings
     - evaluate meetings
     - meeting host
     - governance backlog
