day 4 small corrections

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -45,7 +45,7 @@ terms:
   consent:
     name: Consent (principle)
     definition:
-    glossary: Raise, seek out and resolve objections related to decisions and actions.
+    glossary: Raise, seek out and resolve objections to decisions and actions.
   continuous-improvement:
     name: Continuous Improvement (principle)
     definition:
