--- a/templates/structure.yaml
+++ b/templates/structure.yaml
@@ -88,6 +88,7 @@ chapters:
     - rounds
     - facilitate meetings
     - prepare for meetings
+    - check in
     - evaluate meetings
     - meeting host
     - governance backlog
