fixed typo in pattern name

--- a/templates/structure.yaml
+++ b/templates/structure.yaml
@@ -67,7 +67,7 @@ chapters:
     - create a pull-system for organizational change
     - be the change
     - invite change
-    - open-space for change
+    - open space for change
     - continuous improvement of work process
   defining agreements:
     - agreement
