--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -202,6 +202,7 @@ terms:
     glossary: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values").
   values:
     name: Values
+    definition: **Values** are valued principles that guide behavior. Values define scope for action and ethical constraints.
     glossary: Valued principles that guide behavior. Not to be confused with "value" (singular) in the context of a driver. 
   waste:
     name: Waste
