--- a/templates/structure.yaml
+++ b/templates/structure.yaml
@@ -73,7 +73,7 @@ chapters:
     - agreement
     - develop strategy
     - clarify domains
-    - intended outcome
+    - clarify intended outcome
     - describe deliverables
     - evaluation criteria
     - logbook
