--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -174,8 +174,8 @@ terms:
     glossary: A mindset where people affected by decisions can influence them on the basis of reasons to do so.
   strategy:
     name: Strategy
-    definition: A **strategy** is a high level approach how people will create value to successfully account for a domain.
-    glossary: A high level approach how people will create value to successfully account for a domain.
+    definition: A **strategy** is a high level approach for how people will create value to successfully account for a domain.
+    glossary: A high level approach for how people will create value to successfully account for a domain.
   subdomain:
     name: Subdomain
     definition:
@@ -206,10 +206,9 @@ terms:
     glossary: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values").
   values:
     name: Values
-    definition: **Values** are valued principles that guide behavior. Values define scope for action and ethical constraints.
-    glossary: Valued principles that guide behavior. Not to be confused with "value" (singular) in the context of a driver. 
+    definition: "**Values** are valued principles that guide behavior. Values define scope for action and ethical constraints."
+    glossary: "Valued principles that guide behavior. Not to be confused with \"value\" (singular) in the context of a driver."
   waste:
     name: Waste
-    definition: **Waste** is anything not necessary for — or standing in the way of — effective response of a driver.
-    glossary: Anything not necessary for — or standing in the way of — effective response of a driver.
-
+    definition: "**Waste** is anything unnecessary for — or standing in the way of — a (more) effective response of a driver."
+    glossary: Anything unnecessary for — or standing in the way of — a (more) effective response of a driver.
