more updates during a call

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -50,6 +50,10 @@ terms:
     name: Consent (principle)
     definition:
     glossary: Raise, seek out and resolve objections to decisions and actions.
+  constituent:
+    name: Constituent
+    definition:
+    glossary: A group of people (e.g. a circle, team, department, branch, project or organization) who delegate authority to a representative to act on their behalf in other groups or organizations.
   continuous-improvement:
     name: Continuous Improvement (principle)
     definition:
