fixed capitalization in glossary

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -141,7 +141,7 @@ terms:
     definition:
     glossary: The work being done to create and deliver value, guided by governance.
   operations-backlog:
-    name: operations backlog
+    name: Operations Backlog
     definition: An **operations backlog** is a visible list of (typically prioritized) uncompleted work items (deliverables).
     glossary: A visible list of (typically prioritized) uncompleted work items (deliverables).
   objection:
