--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -26,8 +26,8 @@ terms:
     glossary: The process of bringing the actions of all parts of an organization in line with the organization's objectives.
   backlog:
     name: Backlog
-    definition: A backlog (to-do-list) is a visible list of (often prioritized) uncompleted work items (deliverables), or (drivers) that need to be addressed.
-    glossary: A visible list of (often prioritized) uncompleted work items (deliverables), or drivers that need to be addressed.
+    definition: A **backlog** (to-do-list) is a list of (often prioritized) uncompleted work items (deliverables), or (drivers) that need to be addressed.
+    glossary: A list of (often prioritized) uncompleted work items (deliverables), or (drivers) that need to be addressed.
   chosen-values:
     name: Chosen Values
     glossary: A set of principles a group (or an organization) has chosen to collectively adopt to guide their behavior in the context of their collaboration.
