updated introductions: grouped sections as "making sense of organizations"

--- a/content/structure-new.yaml
+++ b/content/structure-new.yaml
@@ -18,6 +18,8 @@ content:
         slug: patterns
       - title: Principles
         slug: principles
+      - title: Making Sense of Organizations
+        slug: making-sense-of-organizations
       - title: Driver
         slug: driver
       - title: Domain
