renamed group to "Enablers of Collaboration

--- a/content/structure-new.yaml
+++ b/content/structure-new.yaml
@@ -68,8 +68,8 @@ content:
         - title: Development Plan
           slug: development-plan
 
-    - title: Enablers Of Co-Creation
-      slug: enablers-of-co-creation
+    - title: Enablers Of Collaboration
+      slug: enablers-of-collaboration
       sections:
         - title: Artful Participation
           slug: artful-participation
